[gd_scene load_steps=7 format=3 uid="uid://c02edckygfuvp"]

[ext_resource type="Script" path="res://Stages/Mecanics.gd" id="1_nytuo"]
[ext_resource type="TileSet" uid="uid://m0clvwg7c4u1" path="res://TileMap/TileMap.tres" id="2_05n5u"]
[ext_resource type="PackedScene" uid="uid://dc2wda1a481xr" path="res://Player/Player.tscn" id="3_nibii"]
[ext_resource type="AudioStream" uid="uid://btw05fhulx82f" path="res://Music/test.wav" id="4_s4nsf"]
[ext_resource type="PackedScene" uid="uid://du3jh4x0wq85m" path="res://Menus/Menu.tscn" id="5_eoasl"]
[ext_resource type="AudioStream" uid="uid://bgxbtal2wukj5" path="res://Music/Sound effect/StageCompleted.mp3" id="5_oc6q7"]

[node name="Stage0" type="Node2D"]
script = ExtResource("1_nytuo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="CanvasLayer" instance=ExtResource("5_eoasl")]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_05n5u")
format = 2
layer_0/name = "Void"
layer_0/tile_data = PackedInt32Array(0, 6, 0, 65536, 6, 0, 131072, 6, 0, 1, 6, 0, 65537, 6, 0, 131073, 6, 0, 2, 6, 0, 65538, 6, 0, 131074, 6, 0, 3, 6, 0, 65539, 6, 0, 131075, 6, 0, 4, 6, 0, 65540, 6, 0, 131076, 6, 0, 5, 6, 0, 65541, 6, 0, 131077, 6, 0, 6, 6, 0, 65542, 6, 0, 131078, 6, 0, 7, 6, 0, 65543, 6, 0, 131079, 6, 0, 8, 6, 0, 9, 6, 0, 65545, 6, 0, 131081, 6, 0, 131080, 6, 0, 65544, 6, 0, -65538, 9, 0, -2, 9, 0, -65537, 9, 0, -1, 9, 0, 65534, 9, 0, 131070, 9, 0, 196606, 9, 0, 262142, 9, 0, 327678, 9, 0, 65535, 9, 0, 131071, 9, 0, 196607, 9, 0, 262143, 9, 0, 327679, 9, 0, 196608, 10, 0, 262144, 9, 0, 196609, 10, 0, 262145, 9, 0, 196610, 10, 0, 262146, 9, 0, 196611, 10, 0, 262147, 9, 0, 196612, 10, 0, 262148, 9, 0, 196613, 10, 0, 262149, 9, 0, 196614, 10, 0, 262150, 9, 0, 196615, 10, 0, 262151, 9, 0, 196616, 10, 0, 262152, 9, 0, 196617, 10, 0, 262153, 9, 0, 196618, 10, 0, 262154, 9, 0, 196619, 10, 0, 262155, 9, 0, -131062, 9, 0, -65526, 6, 0, 10, 6, 0, 65546, 6, 0, 131082, 6, 0, -131061, 9, 0, -65525, 9, 0, 11, 6, 0, 65547, 6, 0, 131083, 6, 0, -131072, 9, 0, -65536, 9, 0, -131071, 9, 0, -65535, 9, 0, -131070, 9, 0, -65534, 9, 0, -131069, 9, 0, -65533, 9, 0, -131068, 9, 0, -65532, 9, 0, -131067, 9, 0, -65531, 9, 0, -131066, 9, 0, -65530, 9, 0, -131065, 9, 0, -65529, 9, 0, -131064, 9, 0, -65528, 9, 0, -131063, 9, 0, -65527, 6, 0, -65539, 9, 0, -3, 9, 0, 65533, 9, 0, 131069, 9, 0, 196605, 9, 0, 262141, 9, 0, 327677, 9, 0, 393214, 9, 0, 393215, 9, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, -196596, 9, 0, -131060, 9, 0, -65524, 9, 0, 12, 6, 0, 65548, 6, 0, 131084, 6, 0, 196620, 6, 0, 262156, 10, 0, -131074, 9, 0, -131073, 9, 0, -196608, 9, 0, -196607, 9, 0, -196606, 9, 0, -196605, 9, 0, -196604, 9, 0, -196603, 9, 0, -196602, 9, 0, -196601, 9, 0, -196600, 9, 0, -196599, 9, 0, -196598, 9, 0, -196597, 9, 0, 13, 6, 0, 65549, 6, 0, 131085, 6, 0, 14, 6, 0, 65550, 6, 0, 131086, 6, 0, 15, 6, 0, 65551, 6, 0, 131087, 6, 0, 16, 6, 0, 65552, 6, 0, 131088, 6, 0, 17, 6, 0, 65553, 6, 0, 131089, 6, 0, 18, 6, 0, 65554, 6, 0, 131090, 6, 0, 19, 6, 0, 65555, 6, 0, 131091, 6, 0, 20, 6, 0, 131092, 6, 0, -196595, 9, 0, -131059, 9, 0, -65523, 9, 0, -196594, 9, 0, -131058, 9, 0, -65522, 9, 0, -196593, 9, 0, -131057, 9, 0, -65521, 9, 0, -196592, 9, 0, -131056, 9, 0, -65520, 9, 0, -196591, 9, 0, -131055, 9, 0, -65519, 9, 0, -196590, 9, 0, -131054, 9, 0, -65518, 9, 0, -196589, 9, 0, -131053, 9, 0, -65517, 9, 0, -196588, 9, 0, -131052, 9, 0, -65516, 9, 0, 196621, 6, 0, 262157, 10, 0, 327693, 9, 0, 196622, 10, 0, 262158, 9, 0, 327694, 9, 0, 196623, 10, 0, 262159, 9, 0, 327695, 9, 0, 196624, 10, 0, 262160, 9, 0, 327696, 9, 0, 196625, 10, 0, 262161, 9, 0, 327697, 9, 0, 196626, 10, 0, 262162, 9, 0, 327698, 9, 0, 196627, 10, 0, 262163, 9, 0, 327699, 9, 0, 196628, 10, 0, 262164, 9, 0, 327700, 9, 0, 65556, 0, 0, 21, 6, 0, 65557, 6, 0, 131093, 6, 0, 196629, 10, 0, 262165, 9, 0, 327701, 9, 0, 196630, 9, 0, 262166, 9, 0, 327702, 9, 0, -131050, 9, 0, -65514, 9, 0, 22, 9, 0, 65558, 9, 0, 131094, 9, 0, -131049, 9, 0, -65513, 9, 0, 23, 9, 0, 65559, 9, 0, 131095, 9, 0, 196631, 9, 0, 262167, 9, 0, -196587, 9, 0, -131051, 9, 0, -65515, 9, 0, -196586, 9, 0, -196585, 9, 0, -131048, 9, 0, -65512, 9, 0, 24, 9, 0, 65560, 9, 0, 131096, 9, 0, 196632, 9, 0, 262168, 9, 0, 327703, 9, 0)
layer_1/name = "Objects"

[node name="Player" parent="." instance=ExtResource("3_nibii")]
position = Vector2(48, 48)

[node name="Stage0theme" type="AudioStreamPlayer2D" parent="."]
position = Vector2(656, 48)
stream = ExtResource("4_s4nsf")
volume_db = -10.0
attenuation = 2.5

[node name="StageCompleted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oc6q7")
