[gd_scene load_steps=6 format=3 uid="uid://dok300p1nbn1l"]

[ext_resource type="Script" path="res://Stages/Mecanics.gd" id="1_5b84d"]
[ext_resource type="TileSet" uid="uid://m0clvwg7c4u1" path="res://TileMap/TileMap.tres" id="2_3yhjh"]
[ext_resource type="PackedScene" uid="uid://dc2wda1a481xr" path="res://Player/Player.tscn" id="3_6ppju"]
[ext_resource type="PackedScene" uid="uid://du3jh4x0wq85m" path="res://Menus/Menu.tscn" id="4_4401r"]
[ext_resource type="AudioStream" uid="uid://bgxbtal2wukj5" path="res://Music/Sound effect/StageCompleted.mp3" id="5_7vpax"]

[node name="Stage1" type="Node2D"]
script = ExtResource("1_5b84d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="CanvasLayer" instance=ExtResource("4_4401r")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_3yhjh")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 9, 0, 65534, 9, 0, 131070, 9, 0, 196606, 9, 0, 262142, 9, 0, 327678, 9, 0, -65537, 9, 0, -1, 9, 0, 65535, 9, 0, 131071, 9, 0, 196607, 9, 0, 262143, 9, 0, 327679, 9, 0, 393215, 9, 0, 65547, 9, 0, 131083, 9, 0, 196619, 9, 0, 262155, 9, 0, 327691, 9, 0, -131072, 9, 0, -65536, 9, 0, -131071, 9, 0, -65535, 9, 0, -131070, 9, 0, -65534, 9, 0, -131069, 9, 0, -65533, 9, 0, -131068, 9, 0, -65532, 9, 0, -131067, 9, 0, -65531, 9, 0, -131066, 9, 0, -65530, 9, 0, -131065, 9, 0, -65529, 9, 0, -131064, 9, 0, -65528, 9, 0, -65527, 9, 0, 262144, 10, 0, 327680, 9, 0, 262145, 10, 0, 327681, 9, 0, 262146, 10, 0, 327682, 9, 0, 262147, 10, 0, 327683, 6, 0, 262148, 10, 0, 327684, 9, 0, 262149, 10, 0, 327685, 9, 0, 262150, 10, 0, 327686, 9, 0, 262151, 6, 0, 327687, 6, 0, 262152, 6, 0, 327688, 6, 0, 262153, 6, 0, 327689, 6, 0, 262154, 9, 0, 327690, 9, 0, 0, 9, 0, 65536, 6, 0, 131072, 6, 0, 196608, 6, 0, 1, 6, 0, 65537, 6, 0, 131073, 6, 0, 196609, 6, 0, 2, 6, 0, 65538, 6, 0, 131074, 6, 0, 196610, 6, 0, 3, 6, 0, 65539, 6, 0, 131075, 6, 0, 196611, 6, 0, 4, 6, 0, 65540, 6, 0, 131076, 6, 0, 196612, 6, 0, 5, 6, 0, 65541, 6, 0, 131077, 6, 0, 196613, 6, 0, 6, 6, 0, 65542, 6, 0, 131078, 6, 0, 196614, 6, 0, 7, 6, 0, 65543, 6, 0, 131079, 6, 0, 196615, 6, 0, 393223, 6, 0, 458759, 6, 0, 524295, 6, 0, 589831, 6, 0, 131080, 6, 0, 196616, 6, 0, 393224, 6, 0, 458760, 6, 0, 524296, 6, 0, 589832, 6, 0, 131081, 6, 0, 196617, 6, 0, 393225, 6, 0, 458761, 6, 0, 524297, 6, 0, 589833, 10, 0, 458756, 6, 0, 524292, 6, 0, 589828, 6, 0, 458757, 6, 0, 524293, 6, 0, 589829, 6, 0, 458758, 6, 0, 524294, 6, 0, 589830, 6, 0, 393219, 0, 0, 458755, 6, 0, 524291, 6, 0, 393220, 6, 0, 589827, 6, 0, 393218, 6, 0, 458754, 6, 0, 524290, 6, 0, 589826, 6, 0, 393216, 9, 0, 458752, 9, 0, 524288, 9, 0, 589824, 9, 0, 655360, 9, 0, 393217, 9, 0, 458753, 9, 0, 524289, 9, 0, 589825, 9, 0, 655361, 9, 0, 720897, 9, 0, 655362, 10, 0, 720898, 9, 0, 655363, 10, 0, 720899, 9, 0, 655364, 10, 0, 720900, 9, 0, 655365, 10, 0, 720901, 9, 0, 655366, 10, 0, 720902, 9, 0, 655367, 10, 0, 720903, 9, 0, 655368, 10, 0, 720904, 9, 0, 655369, 9, 0, 720905, 9, 0, 655370, 9, 0, 720906, 9, 0, 393226, 9, 0, 458762, 9, 0, 524298, 9, 0, 589834, 9, 0, 393227, 9, 0, 458763, 9, 0, 524299, 9, 0, 589835, 9, 0, 655371, 9, 0, 10, 9, 0, 65546, 9, 0, 131082, 9, 0, 196618, 9, 0, 8, 9, 0, 65544, 6, 0, 9, 9, 0, 65545, 9, 0, 393221, 9, 0, 393222, 6, 0)

[node name="Player" parent="." instance=ExtResource("3_6ppju")]
position = Vector2(48, 48)

[node name="StageCompleted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7vpax")
