[gd_scene load_steps=8 format=3 uid="uid://482sij4elywi"]

[ext_resource type="Script" path="res://Stages/Mecanics.gd" id="1_2n1nd"]
[ext_resource type="TileSet" uid="uid://m0clvwg7c4u1" path="res://TileMap/TileMap.tres" id="1_114um"]
[ext_resource type="PackedScene" uid="uid://dc2wda1a481xr" path="res://Player/Player.tscn" id="2_oto0j"]
[ext_resource type="AudioStream" uid="uid://d1yex60si0yr8" path="res://Music/Sound effect/Test.wav" id="4_45k30"]
[ext_resource type="PackedScene" uid="uid://elmafw3truya" path="res://Ennemies/Slime.tscn" id="5_coyya"]
[ext_resource type="PackedScene" uid="uid://du3jh4x0wq85m" path="res://Menus/Menu.tscn" id="6_4ehek"]
[ext_resource type="AudioStream" uid="uid://bgxbtal2wukj5" path="res://Music/Sound effect/StageCompleted.mp3" id="7_mjv8g"]

[node name="Stage5" type="Node2D"]
script = ExtResource("1_2n1nd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="CanvasLayer" instance=ExtResource("6_4ehek")]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("1_114um")
format = 2
layer_0/name = "Void"
layer_0/tile_data = PackedInt32Array(0, 6, 0, 65536, 6, 0, 131072, 6, 0, 196608, 9, 0, 1, 6, 0, 65537, 6, 0, 131073, 6, 0, 196609, 6, 0, 2, 6, 0, 65538, 6, 0, 131074, 6, 0, 196610, 6, 0, 3, 6, 0, 65539, 2, 0, 131075, 6, 0, 196611, 6, 0, 4, 6, 0, 65540, 6, 0, 131076, 6, 0, 196612, 6, 0, 5, 6, 0, 65541, 6, 0, 131077, 6, 0, 196613, 6, 0, 6, 6, 0, 65542, 13, 0, 131078, 6, 0, 196614, 6, 0, 7, 6, 0, 65543, 6, 0, 131079, 6, 0, 196615, 9, 0, 8, 6, 0, 65544, 6, 0, 131080, 6, 0, 196616, 6, 0, 9, 9, 0, 65545, 9, 0, 131081, 6, 0, 196617, 6, 0, 262144, 9, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 9, 0, 262151, 9, 0, 262152, 6, 0, 262153, 6, 0, 262143, 9, 0, -65538, 9, 0, -2, 9, 0, 65534, 9, 0, 131070, 9, 0, 196606, 9, 0, 262142, 9, 0, 327678, 9, 0, 393214, 9, 0, -65537, 9, 0, -1, 9, 0, 65535, 9, 0, 131071, 9, 0, 196607, 9, 0, 327679, 9, 0, 393215, 9, 0, -131072, 9, 0, -65536, 9, 0, -131071, 9, 0, -65535, 9, 0, -131070, 9, 0, -65534, 9, 0, -131069, 9, 0, -65533, 9, 0, -131068, 9, 0, -65532, 9, 0, -131067, 9, 0, -65531, 9, 0, -131066, 9, 0, -65530, 9, 0, -131065, 9, 0, -65529, 9, 0, -131064, 9, 0, -65528, 9, 0, -131063, 9, 0, -65527, 9, 0, -131062, 9, 0, -65526, 9, 0, -131061, 9, 0, -65525, 9, 0, 10, 9, 0, 65546, 9, 0, 131082, 9, 0, 196618, 9, 0, 262154, 9, 0, 327690, 9, 0, 393226, 9, 0, 11, 9, 0, 65547, 9, 0, 131083, 9, 0, 196619, 9, 0, 262155, 9, 0, 327691, 9, 0, 393227, 9, 0, 458750, 9, 0, 458751, 9, 0, 327680, 9, 0, 393216, 9, 0, 327681, 9, 0, 393217, 9, 0, 327682, 9, 0, 393218, 9, 0, 327683, 9, 0, 393219, 9, 0, 327684, 9, 0, 393220, 9, 0, 327685, 9, 0, 393221, 9, 0, 327686, 9, 0, 393222, 9, 0, 327687, 9, 0, 393223, 9, 0, 327688, 9, 0, 393224, 9, 0, 327689, 9, 0, 393225, 9, 0)
layer_1/name = "Object"

[node name="Player" parent="." instance=ExtResource("2_oto0j")]
position = Vector2(48, 48)

[node name="Slime" parent="." instance=ExtResource("5_coyya")]
position = Vector2(112, 112)

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_45k30")

[node name="StageCompleted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mjv8g")
